...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Employees" id="JwA-7o-ddi"/>
                    <connections>
                        <outlet property="tableView" destination="x5m-Al-nHA" id="kK6-PR-Umw"/>
...
                                        <rect key="frame" x="0.0" y="10" width="428" height="738"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vvz-Dq-Fo5">
                                                <rect key="frame" x="40" y="40" width="348" height="40"/>
                                                <constraints>
...
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a7G-8z-WHZ">
                                                <rect key="frame" x="40" y="105" width="348" height="40"/>
                                                <constraints>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Login">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                                </buttonConfiguration>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Forgot Password?">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                                </buttonConfiguration>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Network Call">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                                </buttonConfiguration>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Offline JSON">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                                </buttonConfiguration>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Map View">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                                </buttonConfiguration>
...
                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign up">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                </buttonConfiguration>
...
                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="JSON Data">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                </buttonConfiguration>
...
                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="XML Data">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                </buttonConfiguration>
...
                                        <rect key="frame" x="0.0" y="4" width="428" height="757"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SIl-1l-KBZ">
                                                <rect key="frame" x="40" y="50" width="348" height="40"/>
                                                <constraints>
...
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q0c-ir-1d4">
                                                <rect key="frame" x="40" y="170" width="348" height="40"/>
                                                <constraints>
...
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="tel"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wqz-3k-Qtl">
                                                <rect key="frame" x="40" y="290" width="348" height="40"/>
                                                <constraints>
...
                                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="SignUp">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
