...
    private func showAlert(alertMessage: String) {
        
        // Dialog box contents
        let alertController = UIAlertController(title: "Invalid", message: alertMessage, preferredStyle: .alert)
        
        // Action Button
        let  okAction = UIAlertAction(title: "OK", style: .default)
        alertController.addAction(okAction)
        
        // Pop up dialog box with contents
        self.present(alertController, animated: true)
    }
    
...
