...
    var bookTitle = String()
    var bookAuthor = String()
    var flag: Bool = false
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "JSON & XML Data"
        // Do any additional setup after loading the view.
    }
    
    // MARK: IBActions
    @IBAction func reloadData(_ sender: Any) {
        //setting flag
...
